# bazel-jsonnet-grafana-demo

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  dashboard.jsonnet  docker-compose.yaml  grafana.jsonnet  grafonnet-lib.BUILD.bazel  grafonnet-lib.WORKSPACE.bazel  secrets.libsonnet
.github/workflows/: build.yml
dashboards/: BUILD.bazel  _applications.libsonnet  dashboard.libsonnet
e2e/: BUILD.bazel  Dockerfile  docker-compose.yaml  docker-compose.yml  package-lock.json  package.json
e2e/cypress/integration/: cypress_demo_test.js
e2e/cypress/support/: commands.js  index.js
test/: .terraform.lock.hcl  BUILD.bazel  go.mod  go.sum  main_test.go
