load("@io_bazel_rules_jsonnet//jsonnet:jsonnet.bzl", "jsonnet_library", "jsonnet_to_json")

jsonnet_to_json(
    name = "grafana",
    multiple_outputs = True,
    # where src located
    src = "grafana.jsonnet",
    # output filename
    outs = [
        "main.tf.json",
        "app.json"
    ],
    # grafonnet provide many templates to generate dashboard json 
    deps = [
        "//dashboards:dashboards",
        "@grafonnet-lib//:grafonnet"
    ]
)


