load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

# go_test(
#     name = "hello",
#     srcs = ["main_test.go"],
#     deps = [":com_github_gruntwork_io_terratest"]
# )

go_library(
    name = "google",
    srcs = [
        "appengine.go",
        "appengine_gen2_flex.go",
        "default.go",
        "doc.go",
        "google.go",
        "jwt.go",
        "sdk.go",
    ],
    importpath = "golang.org/x/oauth2/google",
    visibility = ["//visibility:public"],
    deps = [
        "//:org_golang_x_oauth2",
        "//authhandler",
        "//google/internal/externalaccount",
        "//internal",
        "//jws",
        "//jwt",
        "@com_google_cloud_go//compute/metadata",
    ],
)

alias(
    name = "go_default_library",
    actual = ":google",
    visibility = ["//visibility:public"],
)

go_test(
    name = "lib_test",
    srcs = ["main_test.go"],
    deps = [
        "@com_github_gruntwork_io_terratest//modules/terraform",
        "@com_github_stretchr_testify//assert",
        "@com_github_testcontainers_testcontainers_go//:testcontainers-go",
        "@com_github_testcontainers_testcontainers_go//wait",
        "@com_google_cloud_go_compute//metadata:go_default_library",
    ],
)
